--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
     <!-- hero section -->
     <header class="hero-section">
         <div class="content">
-            <img src="img/light-logo.png" class="logo" alt="">
-            <p class="sub-heading">best fashion collection of all time</p>
+            <img src="img/logo_transparent.png" class="logo" alt="">
         </div>
     </header>
 
