--- a/public/login.html
+++ b/public/login.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="container">
-        <img src="img/dark-logo.png" class="logo" alt="">
+        <img src="img/logo_transparent.png " class="logo" alt="">
         <div>
             <input type="email" autocomplete="off" id="email" placeholder="email">
             <input type="password" autocomplete="off" id="password" placeholder="password">
