--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- hero section -->
     <header class="hero-section">
         <div class="content">
-            <img src="img/logo_transparent.png" class="logo" alt="">
+            <a href="" class="link"><img src="img/logo_transparent.png" alt=""></a>
         </div>
     </header>
 
