--- a/public/login.html
+++ b/public/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clothing : Create Account</title>
+    <title>TB Login</title>
 
     <link rel="stylesheet" href="css/signup.css">
 
 </head>
 <body>
-    
+
     <img src="img/loader.gif" class="loader" alt="">
 
     <div class="alert-box">
@@ -19,24 +19,17 @@
     </div>
 
     <div class="container">
-        <img src="img/logo_transparent.png" class="logo" alt="">
+        <img src="img/logo_transparent.png " class="logo" alt="">
         <div>
-            <input type="text" autocomplete="off" id="name" placeholder="name">
             <input type="email" autocomplete="off" id="email" placeholder="email">
             <input type="password" autocomplete="off" id="password" placeholder="password">
-            <input type="text" autocomplete="off" id="number" placeholder="number">
-            <input type="checkbox" checked class="checkbox" id="terms-and-cond">
-            <label for="terms-and-cond">agree to our <a href="">terms and conditions</a></label>
-            <br>
-            <input type="checkbox" class="checkbox" id="notification">
-            <label for="notification">recieve upcoming offers and events mails</a></label>
-            <button class="submit-btn">create account</button>
+            <button class="submit-btn">log in</button>
         </div>
-        <a href="/login" class="link">already have an account? Log in here</a>
+        <a href="http://127.0.0.1:3000/public/signup.html" class="link">don't have an account? Create one</a>
     </div>
 
     <script src="js/token.js"></script>
     <script src="js/form.js"></script>
-
+    
 </body>
 </html>
