--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -143,7 +143,7 @@
 
      <!-- card-container -->
      <section class="product">
-        <h2 class="product-category">Shirts</h2>
+        <h2 class="product-category">RAM</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
         <div class="product-container">
@@ -248,7 +248,7 @@
 
     <!-- card-container -->
     <section class="product">
-        <h2 class="product-category">Shoes</h2>
+        <h2 class="product-category">Motherboards</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
         <div class="product-container">
