--- a/public/mainpage.html
+++ b/public/mainpage.html
@@ -16,7 +16,7 @@
     <!-- hero section -->
     <header class="hero-section">
         <div class="content">
-            <a href="" class="link"><img src="img/logo_transparent.png" alt=""></a>
+            <a href="http://127.0.0.1:3000/public/landingpage.html" class="link"><img src="img/logo_transparent.png" alt=""></a>
         </div>
     </header>
 
