--- a/Danish/index.html
+++ b/Danish/index.html
@@ -19,42 +19,48 @@
    
 <div class="container">
 
-   <h3 class="title"> organic products </h3>
+   <h3 class="title">Computer Accecories</h3>
 
    <div class="products-container">
 
       <div class="product" data-name="p-1">
-         <img src="images/1.png" alt="">
+         <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQ8AiIIhWUYZa2jKtB9-jGlBLYBqypljJSFZs_X1FkERzyTyWBlmGUeWaNGiPJ096UH_DxOl6B7gK1nNw&usqp=CAc" alt="">
          <h3>strawberries</h3>
          <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-2">
-         <img src="images/2.png" alt="">
+         <img src="https://www.sysnapse.com/image/sysnapse/image/cache/data/all_product_images/product-52000/CM8062300834302-420x420.jpg"" alt="">
          <h3>onions</h3>
          <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-3">
-         <img src="images/3.png" alt="">
+         <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcS6VTiI2nZIFpLJ2WlG2JljtuBjlQR8XokQ7CXFklkmQFPhqfr-8JFKZdjV0sGTbR9zmGNDZAagqtM&usqp=CAc" alt="">
          <h3>tomatoes</h3>
          <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-4">
-         <img src="images/4.png" alt="">
+         <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcQVePFTR6poomFeSZ3mCUUb3UjbmG2aovpT_4JomQRWUFjqUGggRIeugnxvPir2RMjHeAPvD6ZraI4&usqp=CAc" alt="">
          <h3>brinjal</h3>
          <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-5">
-         <img src="images/5.png" alt="">
+         <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcSH7rOb_iYwUnxra6DYizjJqzCye0FmjtcfrjDP5LI7dGWp31wFP2nwssmkektDIG6d3iePeDN3piw&usqp=CAc" alt="">
          <h3>broccoli</h3>
          <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-6">
-         <img src="images/6.png" alt="">
+         <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQAy55pfzMMHPzwooQVIEyHjd2f1GiB5ELJY1oEvajuSLKN6hWOPztuSpsgwCyGxlOa33w_qoGXLw&usqp=CAc" alt="">
+         <h3>potatoes</h3>
+         <div class="price">$2.00</div>
+      </div>
+
+      <div class="product" data-name="p-6">
+         <img src="https://www.sysnapse.com/image/sysnapse/image/cache/data/all_product_images/product-54839/7DNVlzBw1591175683-420x420.jpg" 
          <h3>potatoes</h3>
          <div class="price">$2.00</div>
       </div>
@@ -67,7 +73,7 @@
 
    <div class="preview" data-target="p-1">
       <i class="fas fa-times"></i>
-      <img src="images/1.png" alt="">
+      <img src="img/1.png" alt="">
       <h3>organic strawberries</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -87,7 +93,7 @@
 
    <div class="preview" data-target="p-2">
       <i class="fas fa-times"></i>
-      <img src="images/2.png" alt="">
+      <img src="img/2.png" alt="">
       <h3>organic onions</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -107,7 +113,7 @@
 
    <div class="preview" data-target="p-3">
       <i class="fas fa-times"></i>
-      <img src="images/3.png" alt="">
+      <img src="img/3.png" alt="">
       <h3>organic tomatoes</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -127,7 +133,7 @@
 
    <div class="preview" data-target="p-4">
       <i class="fas fa-times"></i>
-      <img src="images/4.png" alt="">
+      <img src="img/4.png" alt="">
       <h3>organic brinjal</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -147,7 +153,7 @@
 
    <div class="preview" data-target="p-5">
       <i class="fas fa-times"></i>
-      <img src="images/5.png" alt="">
+      <img src="img/5.png" alt="">
       <h3>organic broccoli</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -167,7 +173,7 @@
 
    <div class="preview" data-target="p-6">
       <i class="fas fa-times"></i>
-      <img src="images/6.png" alt="">
+      <img src="img/6.png" alt="">
       <h3>organic potatoes</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
